# oss-repo-auditor

./: CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  rule_request.md
.github/workflows/: tests.yml
examples/sample_project/: CONTRIBUTING.md  README.md  pyproject.toml
examples/sample_project/.github/workflows/: tests.yml
src/oss_repo_auditor/: __init__.py  audit.py  cli.py  models.py  report.py
tests/: test_audit.py  test_cli.py  test_report.py
