[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "oss-repo-auditor"
version = "0.1.0"
description = "Local open-source repository hygiene reports"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Open Source Maintainers" }]
keywords = ["open-source", "maintainers", "repository", "security", "ci"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Quality Assurance",
]

[project.scripts]
oss-repo-auditor = "oss_repo_auditor.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
